kubernetes/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aiw-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
spec: 
  rules:
  - http:
      paths:
      - path: /home
        backend:
          serviceName: aiw-dashboard
          servicePort: 80
      - path: /minio
        backend:
          serviceName: aiw-minio
          servicePort: 9000
      - path: /mlflow
        backend:
          serviceName: aiw-mlflow
          servicePort: 5000
      - path: /phpmyadmin
        backend:
          serviceName: aiw-phpmyadmin
          servicePort: 80
